--- a/index.html
+++ b/index.html
@@ -69,12 +69,10 @@
   <div id="question3" class="question">
       <h2>Fler pappamånader ska införas</h2>
       Endast en fjärdedel av föräldradagarna tas ut av män. Majoriteten män tar bara ut de tre öronmärkta pappamånaderna. Därför finns förslag om att utöka antalet månader, som föräldrarna inte får överlåta, från tre till fem.
-    <br />
-    <br />
+    <p>
     <b>Argument för</b>
       Föräldraförsäkringen har en nyckelroll för jämställdheten – därför är dagens tre pappamånader inte nog. Barn behöver båda föräldrarna och därför ska föräldraförsäkringen delas mer jämlikt mellan föräldrarna.
-    <br />
-    <br />
+    </p>
     <b>Argument mot</b>
       Staten ska inte lägga sig i hur föräldrar använder föräldraförsäkringen. Föräldrarna är bäst lämpade att avgöra det. Det behövs ett flexiblare synsätt på föräldraförsäkringen, en del av försäkringen bör exempelvis kunna användas senare när barnen är äldre.
 
@@ -90,7 +88,7 @@
 
   </div>
   <div id="question5" class="question">
-      Eget bruk av narkotika ska tillåtas
+      <h2>Eget bruk av narkotika ska tillåtas</h2>
       En hård attityd mot narkotika och narkotikaanvändning utmärker svensk politik. Spår av narkotika i blodet kan ge upp till sex månaders fängelse.
       Argument för
       Sverige redovisar hög dödlighet på grund av narkotikaanvändning. Legalisering skulle leda till att fler söker hjälp och vård. Nolltoleransen fungerar inte.
@@ -99,7 +97,7 @@
 
   </div>
   <div id="question6" class="question">
-      Sverige ska söka medlemskap i Nato
+      <h2>Sverige ska söka medlemskap i Nato</h2>
       Medlemsstaterna i Nato ska försvara varandra mot yttre fiender. Merparten av Europas stater är medlemmar. Nato är världens viktigaste militära sammanslutning vars budget utgör 69 procent av världens samlade försvarsutgifter
       Argument för
       Sverige har redan nu ett nära samarbete med Nato, vars syfte är att värna om demokratin. Därför är ett medlemskap naturligt. Ett medlemskap är nödvändigt för att kunna påverka utvecklingen inom alliansen.
@@ -108,7 +106,7 @@
 
   </div>
   <div id="question7" class="question">
-      Arbetsförmedlingen ska läggas ner
+      <h2>Arbetsförmedlingen ska läggas ner</h2>
       Arbetsförmedlingens huvuduppdrag är att sammanföra arbetssökande med arbetsgivare som söker arbetskraft. Arbetsförmedlingen ska också stödja och rusta personer som befinner sig långt från arbetsmarknaden.
       Argument för
       Statens miljardsatsningar är bortkastade. Arbetsförmedlingen klarar inte sitt uppdrag. En ny myndighet bör få ansvar för uppföljning på arbetsmarknaden. Matchningen av arbetssökande bör skötas av bemannings- och rekryteringsföretag.
@@ -117,7 +115,7 @@
 
   </div>
   <div id="question8" class="question">
-      Rut-avdraget ska tredubblas
+      <h2>Rut-avdraget ska tredubblas</h2>
       Rut-avdraget möjliggör skatteavdrag för tjänster i hemmet. Ett förslag handlar om att utvidga rut jämfört med i dag. Istället för 25 000 kronor per år föreslås 70 000 i skatteavdrag för arbetskostnad. Avdraget ska enligt förslaget riktas tydligare mot äldre.
       Argument för
       Rut skapar nya jobb, i första hand för dem som har svårt att ta sig in på arbetsmarknaden. Det gynnar tillväxten. Samtidigt är rut till stor hjälp för människor som behöver stöd i hemmet – allt från barnfamiljer till pensionärer.
@@ -126,7 +124,7 @@
 
   </div>
   <div id="question9" class="question">
-      Inga fler religiösa friskolor ska tillåtas
+      <h2>Inga fler religiösa friskolor ska tillåtas</h2>
       I Sverige har runt 1 procent av skolorna en huvudman med religiös anknytning. Det finns förslag om att skärpa reglerna för dessa 70 religiösa grund- och gymnasieskolor samt att inga fler religiösa friskolor ska få starta.
       Argument för
       En huvudtanke med svensk skola är integrering - elever från olika miljöer ska mötas. Skolan ska inte sära på barn och föräldrar och organisationer ska inte kunna isolera barn från samhället. Därför ska inga fler religiösa skolor få starta.
@@ -135,7 +133,7 @@
 
   </div>
   <div id="question10" class="question">
-      Sverige ska lämna EU
+      <h2>Sverige ska lämna EU</h2>
       Allt sedan Sverige blev medlem i EU 1995 har några partier krävt att Sverige ska lämna EU. Samtidigt har andra partier som tidigare var emot medlemskapet kommit att acceptera det.
       Argument för
       Storbritanniens folkomröstning har visat att det är möjligt att lämna EU. Vi behöver inte ett odemokratiskt supermaktsbygge utan mer nationellt självbestämmande. Det militära samarbetet inom EU äventyrar just nu svensk neutralitetspolitik.
@@ -144,7 +142,7 @@
 
   </div>
   <div id="question11" class="question">
-      Varje form av stöd till terrorism ska kriminaliseras
+      <h2>Varje form av stöd till terrorism ska kriminaliseras</h2>
       Det är straffbart i Sverige att stödja terrorism ekonomiskt. Frågan om att kriminalisera medlemskap eller ett mer allmänt stöd till terrororganisationer har diskuterats. Nu finns förslag att bredda lagen även för andra typer av stöd och deltagande. En modell finns i Norge där det är förbjudet att vara med i en terrororganisation.
       Argument för
       Det finns en lucka i lagen som gäller människor som ger allmänt stöd eller som agerar aktivt för terrorism utan att det kan kopplas till ett specifikt brott. Denna lucka måste täppas till så att det blir lättare att förebygga terrorbrott.
@@ -153,7 +151,7 @@
 
   </div>
   <div id="question12" class="question">
-      Lägre ingångslöner för ungdomar ska införas
+      <h2>Lägre ingångslöner för ungdomar ska införas</h2>
       Forskningen kan inte entydigt visa att lägre ingångslöner leder till fler jobb för unga, men mycket tyder på det. Skillnaderna är dock stora mellan exempelvis industrin och de sektorer där många unga arbetar, till exempel detaljhandel, hotell- och restaurangjobb.
       Argument för
       Lägre ingångslöner leder till fler jobb. Med ett första lågbetalt jobb ges möjlighet att höja lönen genom att visa framfötterna. Statistik visar att klättringen i lönetrappan kan vara snabb. Alternativet, att stå utanför arbetsmarknaden, är förödande för unga människor.
@@ -162,7 +160,7 @@
 
   </div>
   <div id="question13" class="question">
-      Det är rätt att införa en flygskatt
+      <h2>Det är rätt att införa en flygskatt</h2>
       Flygskatten ska värna om miljön. Den medför att varje flygresa blir dyrare. En resa inom Sverige och EU stiger med 60 kronor, medan långflygningen kan bli 400 kronor dyrare.
       Argument för
       Alla kommunikationer, flyget liksom bilismen, måste ta större ansvar för miljön och klimatpåverkan. Att ta ansvar innebär att betala för sina miljöpåverkande utsläpp.
@@ -171,7 +169,7 @@
 
   </div>
   <div id="question14" class="question">
-      Pensionsåldern ska höjas
+      <h2>Pensionsåldern ska höjas</h2>
       Förslaget handlar om att höja den nedre gränsen för pension från 61 till 63 år. Samtidigt ska den övre gränsen höjas från 67 till 69 år. Det innebär att alla måste jobba minst två år längre än i dag innan pension. Samtidigt ska den som vill kunna jobba till 69 mot 67 i dag.
       Argument för
       Höjningen av pensionsåldern är en naturlig följd av att vi lever längre och dessutom har fler friska år. Det mest effektiva sättet att få människor att jobba längre är att höja den lagstadgade åldersgränsen.
@@ -180,7 +178,7 @@
 
   </div>
   <div id="question15" class="question">
-      Ensamkommande barn ska få allmän amnesti
+      <h2>Ensamkommande barn ska få allmän amnesti</h2>
       Allmän amnesti för ensamkommande barn och ungdomar, som varit i Sverige i minst ett år, föreslås. Amnesty, FN och Afghanistankommittén bedömer läget i Afghanistan, där de flesta kommer ifrån, som osäkert och att det är riskfyllt att återvända.
       Argument för
       Våldet i Afghanistan är omfattande. En allmän amnesti ger barn möjlighet att börja nya liv i Sverige. Många unga nyanlända har levt så länge som flyktingar att de saknar släktingar att knyta an till eller skickas tillbaka till.
@@ -189,7 +187,7 @@
 
   </div>
   <div id="question16" class="question">
-      <h3>Skatten på pension ska vara samma som på lön</h3>
+      <h2>Skatten på pension ska vara samma som på lön</h2>
       <p>Skatten för pensionärer har sänkts, men fortfarande betalar ungefär hälften av pensionärerna procentuellt mer i skatt än en löntagare. Detta beror på jobbavdraget vars syfte är att fler ska välja jobb före bidrag samtidigt som fler i pensionsålder ska stimuleras att fortsätta arbeta.</p>
       <h4>Argument för</h4>
       Antalet fattiga pensionärer i Sverige beräknas till ungefär 250 000. Pension är uppskjuten lön. Högre beskattning på redan intjänade pengar är orättvist. Pensionärsskatten kan skada samhällsgemenskapen mellan generationer.
@@ -198,7 +196,7 @@
 
   </div>
   <div id="question17" class="question">
-      Sverige ska satsa på snabbtåg
+      <h2>Sverige ska satsa på snabbtåg</h2>
       Snabbtåg mellan Stockholm och Göteborg och mellan Stockholm och Malmö kortar restiderna. Satsningen beräknas kosta minst 230 miljarder kronor.
       Argument för
       Snabbtåg är bra för miljön och förkortar restiden avsevärt. Med snabbanor ökar möjligheterna för mer godstrafik på nuvarande spår. Ett hårt slitet järnvägsnät måste förnyas.
@@ -207,7 +205,7 @@
 
   </div>
   <div id="question18" class="question">
-      Ett bidragstak ska införas
+      <h2>Ett bidragstak ska införas</h2>
       För den som kan arbeta, men inte gör det, föreslås en övre gräns för försörjningsstöd och etableringsersättning. Bidragstaket blir 75 procent av lägstalön och bostadsbidrag– exklusive barnbidrag och underhållsstöd. Syftet är att stimulera till arbete.
       Argument för
       Olika ersättningar staplade på varandra kan leda till så högt sammanlagt bidrag att det blir olönsamt att jobba. Ett bidragstak hjälper människor att inte fastna i bidragsberoende och ger incitament att ta sig in i arbetslivet.
@@ -216,7 +214,7 @@
 
   </div>
   <div id="question19" class="question">
-      Niqab ska förbjudas i skolan
+      <h2>Niqab ska förbjudas i skolan</h2>
       Niqab är en slöja som täcker hela ansiktet utom ögonen. I Norge, Belgien och Frankrike är det förbjudet för såväl lärare som elever att bära niqab i skolan.
       Argument för
       Elever och lärare måste kunna se varandras ansikten, annars försvåras möjligheterna till inlärning. Niqab hör inte hemma i det svenska samhället eftersom det är ett uttryck för kvinnoförtryck.
@@ -225,7 +223,7 @@
 
   </div>
   <div id="question20" class="question">
-      Tandvård ska subventioneras på samma sätt som sjukvård
+      <h2>Tandvård ska subventioneras på samma sätt som sjukvård</h2>
       Förslaget handlar om att jämställa tandvård med övrig sjukvård. Tanken är att tandvården huvudsakligen ska finansieras via skattesystemet, avgifterna ska vara låga och patienterna ska omfattas av högkostnadsskydd liksom övrig sjukvård.
       Argument för
       Kostnaderna för tandvård är så höga att många tvingas avstå från vård, vilket leder till allvarliga tandproblem och höga kostnader för individ och samhälle. Dålig tandhälsa försämrar enskildas livskvalitet och är en klassmarkör.
@@ -234,7 +232,7 @@
 
   </div>
   <div id="question21" class="question">
-      Sex timmars arbetsdag ska införas
+      <h2>Sex timmars arbetsdag ska införas</h2>
       Arbetslivet förändras i och med teknikutveckling och automatisering. En del jobb kommer att försvinna och nya tillkommer. Förslag finns att dela på jobben genom att sänka arbetstiden till sex timmar om dagen med bibehållen lön.
       Argument för
       Sammanhållningen i samhället hotas när jobb försvinner och fler ställs utanför arbetsmarknaden. Utvecklingen ska mötas med sänkt arbetstid och att vi delar på jobben. Det ger ett arbetsliv med ett mänskligare tempo, ett friskare och mer välmående Sverige.
@@ -243,7 +241,7 @@
 
   </div>
   <div id="question22" class="question">
-      Vinster i välfärden ska förbjudas
+      <h2>Vinster i välfärden ska förbjudas</h2>
       Inom välfärdens kärna - skola, vård och omsorg – ska den politiska kontrollen garantera medborgarnas likvärdighet. Med fler privata aktörer inom sektorn har debatt uppstått om rimligheten med vinster på skattefinansierad verksamhet.
       Argument för
       Skattemedel avsedda för skola och sjukvård ska användas för att garantera likvärdig utbildning och god vård för alla medborgare. När privata företag jagar vinst ökar risken för sämre kvalitét och ojämlika prioriteringar.
@@ -252,7 +250,7 @@
 
   </div>
   <div id="question23" class="question">
-      Polisen ska få bättre tillgång till kameraövervakning
+      <h2>Polisen ska få bättre tillgång till kameraövervakning</h2>
       Polisens användning av kameraövervakning ökar. För fem år sedan fanns ett tiotal fasta kameror. I dag är antalet runt 170 och många finns i problemförorter. Nationellt satsar polisen på ett gemensamt och enhetligt övervakningssystem.
       Argument för
       Kameror för övervakning är ett viktigt komplement för att trygga människors vardagsmiljöer liksom för att klara brottsutredningar. Polisens arbete underlättas om tillstånd inte behövs för att kameraövervaka utsatta miljöer.
@@ -261,7 +259,7 @@
 
   </div>
   <div id="question24" class="question">
-      Bensinskatten ska höjas
+      <h2>Bensinskatten ska höjas</h2>
       Sedan 1995 tas en koldioxidskatt plus en energiskatt ut på bensin. Begreppet bensinskatt syftar i dagligt tal på de två skatterna tillsammans. Eftersom det också betalas moms på bensin utgör den totala skatten strax under 60 procent av bensinpriset.
       Argument för
       Att bekämpa klimathotet är den viktigaste uppgiften i dag. Sverige har bland Europas mest bränsletörstiga bilar. I framtiden måste vi sluta slösa med bensinen, satsa på modernare och bensinsnålare bilar och bygga ut kollektivtrafiken.
@@ -270,7 +268,7 @@
 
   </div>
   <div id="question25" class="question">
-      Permanent uppehållstillstånd ska vara huvudregel i flyktingpolitiken
+      <h2>Permanent uppehållstillstånd ska vara huvudregel i flyktingpolitiken</h2>
       En utländsk medborgare med permanent uppehållstillstånd har rätt att bo, studera och arbeta i Sverige, liksom att åka in i och ut ur landet. Möjlighet finns också att ta hit sin familj.
       Argument för
       Flyktingar som kommer till Sverige för att söka skydd undan krig, våld och förföljelse ska möta en värdig integrationsprocess – inte hot om returresa. Med tillfälliga uppehållstillstånd ökar rättsosäkerheten och risken för enskilda att utnyttjas.
@@ -279,7 +277,8 @@
 
   </div>
   <div id="question26" class="question">
-      Du är färdig ~
+      <h2>Du är färdig ~</h2>
+      Ta ett ögonblick att undersöka grafen innan du går tillbaka och avslutar formuläret. 
   </div>
 </div>
   
