--- a/index.html
+++ b/index.html
@@ -270,11 +270,13 @@
   <div id="question25" class="question">
       <h2>Permanent uppehållstillstånd ska vara huvudregel i flyktingpolitiken</h2>
       En utländsk medborgare med permanent uppehållstillstånd har rätt att bo, studera och arbeta i Sverige, liksom att åka in i och ut ur landet. Möjlighet finns också att ta hit sin familj.
-      Argument för
+      <p>
+      Argument för: 
       Flyktingar som kommer till Sverige för att söka skydd undan krig, våld och förföljelse ska möta en värdig integrationsprocess – inte hot om returresa. Med tillfälliga uppehållstillstånd ökar rättsosäkerheten och risken för enskilda att utnyttjas.
-      Argument mot
+    </p>  
+    <p>Argument mot
       Vetskapen att Sverige inte delar ut permanenta uppehållstillstånd har minskat trycket mot våra gränser. Fler på flykt väljer andra europeiska länder. Tillfälliga uppehållstillstånd ger flyktingar incitament att anstränga sig än mer i integrationsprocessen för att få stanna.
-
+    </p>
   </div>
   <div id="question26" class="question">
       <h2>Du är färdig ~</h2>
