--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
   <div id="question4" class="question">
       <h2>Tiggeri ska förbjudas</h2>
       Flera europeiska länder, till exempel Danmark, Norge, Nederländerna och Storbritannien, har förbud mot gatutiggeri. Det finns flera liknande förslag om förbud mot tiggeri i svensk debatt.
-      <p>Argument för
+      <p><b>Argument för</b>
       Ett tiggeriförbud motverkar risken för livslångt tiggeri och permanent fattigdom. Ett förbud ökar trycket på reformer i tiggarnas hemländer.
     </p>
-        Argument mot
+        <b>Argument mot</b>
       Att förbjuda tiggeri är att angripa ett symptom i stället för problemets rot. De som tigger i Sverige gör det för att de lever under miserabla förhållanden i sina hemländer.
 
   </div>
