--- a/index.html
+++ b/index.html
@@ -126,14 +126,15 @@
     
   </div>
   <div id="question9" class="question">
-      <h2>Sverige ska söka medlemskap i Nato</h2>
-      Medlemsstaterna i Nato ska försvara varandra mot yttre fiender. Merparten av Europas stater är medlemmar. Nato är världens viktigaste militära sammanslutning vars budget utgör 69 procent av världens samlade försvarsutgifter
-      Argument för
-      Sverige har redan nu ett nära samarbete med Nato, vars syfte är att värna om demokratin. Därför är ett medlemskap naturligt. Ett medlemskap är nödvändigt för att kunna påverka utvecklingen inom alliansen.
-      Argument mot
-      Nato baserar sin säkerhet på kärnvapenavskräckning. Men Nato saknar en avgörande säkerhetspolitiska instrument som diplomati, handel och konfliktförebyggande civila insatser. Sverige kan som medlem dras in i andra länders konflikter.
+      <h2>Sex timmars arbetsdag ska införas</h2>
+      Arbetslivet förändras i och med teknikutveckling och automatisering. En del jobb kommer att försvinna och nya tillkommer. Förslag finns att dela på jobben genom att sänka arbetstiden till sex timmar om dagen med bibehållen lön.
 
-    
+      <p><b>Argument för</b>
+      Sammanhållningen i samhället hotas när jobb försvinner och fler ställs utanför arbetsmarknaden. Utvecklingen ska mötas med sänkt arbetstid och att vi delar på jobben. Det ger ett arbetsliv med ett mänskligare tempo, ett friskare och mer välmående Sverige.
+      </p>
+      <p><b>Argument mot</b>
+      Att jobba mindre och kortare tid är redan en möjlighet för den enskilde. Men det är inte rimligt att jobba sex timmar och få betalt för åtta. Sänkt arbetstid ger ett stressigare arbetsliv.
+      </p>
   </div>
   <div id="question10" class="question">
     <h2>Pensionsåldern ska höjas</h2>
