--- a/index.html
+++ b/index.html
@@ -41,30 +41,30 @@
       Syftet med den nya klimatlagen från 1 januari 2018 är att främja en framtida långsiktig och stabil politik för klimat och miljö. 
       Tanken är att framtida riksdagar och regeringar ska tvingas ta hänsyn till, och i praktiken överordna, klimatet när andra politiska 
       beslut ska fattas.
-      <br />
-      <br />
-      <b>Argument för:</b>
+      <p><b>Argument för:</b>
       Den nya klimatpolitiken är den viktigaste reform den nuvarande generationens politiker kommer att ge kommande generationer. Sverige 
       kan nu bli ett av världens första fossilfria välfärdsländer. Omställningen kommer att ge vårt land bättre hälsa, fler jobb och ökad 
       konkurrenskraft.
-    <br />
-    <br />
+    <p/>
+    <p>
       <b>Argument mot:</b>
       Klimatpolitikens upphöjande till lag ökar inte möjligheten att bedriva effektivt klimatpolitiskt arbete. Framtida riksdagsmajoriteter 
       kan upphäva lagen. Klimatfrågor är sammanlänkade med övriga samhällsfrågor och miljöpolitik bör beaktas i samklang med ekonomi och 
       sociala frågor. Dyra utsläppsminskningar i Sverige minskar inte utsläppen globalt, däremot skadas svensk tillväxt.
+    </p>
   </div>
   <div id="question2" class="question" >
       <h2>Den obligatoriska värnplikten ska återinföras</h2>
-      Den allmänna värnplikten avskaffades 2010 med påpekandet att militär värnplikt kan återinföras vid krig. 2017 infördes en mönstringsplikt, men bara 13 000 personer kommer årligen att kallas till mönstring.
+      Den allmänna värnplikten avskaffades 2010 med påpekandet att militär värnplikt kan återinföras vid krig. 2017 infördes en 
+      mönstringsplikt, men bara 13 000 personer kommer årligen att kallas till mönstring.
       <br />
       <br />
     <b>Argument för</b>
     
       Obligatorisk militär värnplikt för män och kvinnor garanterar ett folkligt inflytande över militären, samtidigt som Försvarsmakten klarar sin personalförsörjning. Försvaret är till för att garantera vårt nationella självbestämmande och därför bör Sverige ha en folkligt förankrad försvarsmakt med både fasta och kontraktsanställda.
-      <b>Argument mot</b>
-    <br />
+      <p><b>Argument mot</b>
       Den obligatoriska militära värnplikten är ett system som överlevt sig självt. Deltagande i militära verksamheter ska bygga på frivillighet. Modern krigföring kräver inte längre gigantiska folkliga arméer utan snarare kvalitativt högteknologiska system med experter och professionella soldater.
+      </p>
   </div>
   <div id="question3" class="question">
       <h2>Fler pappamånader ska införas</h2>
