--- a/index.html
+++ b/index.html
@@ -367,14 +367,27 @@ d3.json("miserables.json", function(error, graph) {
     .data(graph.nodes)
     .enter().append("circle")
       .attr("r", 8.2)
-      .attr("fill", "gainsboro") 
+  //  .attr("fill", "gainsboro") 
+      .style("fill", function(d) { return ("url(#"+d.id+"-image)");})
       .attr("id", function(d) { return d.id; })
       .call(d3.drag()
           .on("start", dragstarted)
           .on("drag", dragged)
           .on("end", dragended));
   
-
+    node.enter().append('defs')
+        .append('pattern')
+            .attr('id', function(d) { return (d.id+"-image");}) // just create a unique id (id comes from the json)
+            .attr('width', 1)
+            .attr('height', 1)
+            .attr('patternContentUnits', 'objectBoundingBox')
+            .append("svg:image")
+                .attr("xlink:xlink:href", function(d) { return (d.image);}) // "icon" is my image url. It comes from json too. The double xlink:xlink is a necessary hack (first "xlink:" is lost...).
+                .attr("x", 0)
+                .attr("y", 0)
+                .attr("height", 1)
+                .attr("width", 1)
+				.attr("preserveAspectRatio", "xMinYMin slice");
   
   /* Ignore
   //Here we makes 9 special nodes, each being filled in with a .jpg instead.
@@ -390,20 +403,7 @@ d3.json("miserables.json", function(error, graph) {
   node.append("title")
       .text(function(d) { return d.id; });
   
-  svg.selectAll("#KD").enter()
-      .append("circle")
-      //.attr("id", function(d) {return d.id})
-      .attr("class", "svg-image")
-      .attr("x", "0")
-      .attr("y", "0")
-      .attr("height", "1")
-      .attr("width", "1")
-      .append("image")
-        .attr("x", "0")
-        .attr("y", "0")
-        .attr("height", "70px")
-        .attr("width", "70px")
-        .attr("xlink:href", "https://laridae.github.io/ivis/assets/kd.jpg")
+	
 
   simulation
       .nodes(graph.nodes)
