--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="questions" height=360px width=100%>
 
     <div id="question0" class="question">
-      <h2>Välkommen, </h2>
+      <h2>Välkommen2, </h2>
       Det här är den modifierade valkompassen. Frågorna du får här är desamma, men de 25 visas nu i en directed force graph 
       här under. De olika frågorna dras närmare de partierna som håller med dem, och längre ifrån de partier som är emot dem.  
       <br />
