--- a/index.html
+++ b/index.html
@@ -428,8 +428,11 @@ node.enter().append("circle")
         .attr("y2", function(d) { return d.target.y; });
 
     node
-        .attr("cx", function(d) { return d.x; })
-        .attr("cy", function(d) { return d.y; });
+        //.attr("cx", function(d) { return d.x; })
+        //.attr("cy", function(d) { return d.y; });
+	  
+	.attr("transform", function(d) {
+    	return "translate(" + d.x + "," +  d.y  ")";
   }
 });
 
