--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ node.enter().append("circle")
         //.attr("cy", function(d) { return d.y; });
 	  
 	.attr("transform", function(d) {
-    	return "translate(" + d.x + "," +  d.y  ")";
+    	return "translate(" + d.x + "," +  d.y + ")";
   }
 });
 
