--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ node.enter().append("circle")
         //.attr("cx", function(d) { return d.x; })
         //.attr("cy", function(d) { return d.y; });
 	  
-	.attr("transform", function(d) {
+	.attr("transform", function(d)) {
     	return "translate(" + d.x + "," +  d.y + ")";
   }
 });
