--- a/index.html
+++ b/index.html
@@ -428,12 +428,12 @@ node.enter().append("circle")
         .attr("x2", function(d) { return d.target.x; })
         .attr("y2", function(d) { return d.target.y; });
 
-    node
+    //node
         //.attr("cx", function(d) { return d.x; })
         //.attr("cy", function(d) { return d.y; });
 	
     	
-	.attr("transform", function(d) { 
+	node.attr("transform", function(d) { 
 	    	console.log("Hej Jesper")
     		return "translate(" + d.x + "," +  d.y + ")";
   	})
