--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ d3.json("miserables.json", function(error, graph) {
   */
   //https://github.com/Laridae/ivis/blob/master/v.jpg
 
-  node.append("title")
+  nodes.append("title")
       .text(function(d) { return d.id; });
   
 	
